/*
 * This file was generated by the Gradle 'init' task.
 */

apply plugin: 'java'
sourceCompatibility = 1.8
targetCompatibility = 1.8


dependencies {
    implementation project(':seefusion-util')
    implementation project(':seefusion-installer')
    implementation project(':seefusion-tomcat7Helper')
    implementation project(':seefusion-tomcat8Helper')
    implementation project(':seestack')
    implementation 'javax.servlet:javax.servlet-api:3.1.0'
    implementation 'org.apache.tomcat:tomcat-catalina:7.0.4'
    // https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8
    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
    testImplementation 'org.jmockit:jmockit:1.22'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.apache.derby:derby:10.12.1.1'
    testImplementation 'net.sourceforge.jtds:jtds:1.2.8'
    testImplementation 'mysql:mysql-connector-java:5.1.47'
}

test {
    jvmArgs '-Doracle.jdbc.timezoneAsRegion=false'
}
sourceSets.test {
    resources.srcDirs = ["src/main/resources"]
}
description = 'seefusion-main'
